--- a/style/home.css
+++ b/style/home.css
@@ -1,5 +1,5 @@
 body{ 
-    background: url(../Pic/pexels-elle-hughes-1660030.jpg) no-repeat center center fixed; 
+    background: url(Pic/pexels-elle-hughes-1660030.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
