--- a/style/reg.css
+++ b/style/reg.css
@@ -7,7 +7,7 @@
 
 .sign_up{
     height: 100vh;
-    background: url(/Pic/pexels-katerina-holmes-5907901.jpg);
+    background: url(../Pic/pexels-katerina-holmes-5907901.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
