--- a/style/about.css
+++ b/style/about.css
@@ -57,8 +57,8 @@ nav{
 
 .div-c
 {
-    margin-top: 18%;
-    padding-left: 5%;
+    margin-top: 10%;
+    padding-left: 10%;
 }
 h1{
     color: white;
@@ -83,4 +83,16 @@ p{
     font-size: larger;
     font-weight:200;
     font-style:bold;
+}
+
+@media screen and (max-width: 414px) {
+  body{
+      height: 858px;
+      width: 414px;
+    
+  }
+  nav{
+    display: flex;
+    align-items: none;
+  }
 }
