--- a/style/home.css
+++ b/style/home.css
@@ -32,11 +32,18 @@ body{
     font-style: bold;
     font-size: 20px;
   }
+  nav li a:hover{
+    background-color: #2A4634;
+    padding: 10px;
+    border-radius: 5px;
+  }
+
   .home-btn{
     margin-top: -5px;
     padding: 10px 30px;
     border-radius: 30px;
     background-color:#2A4634 ;
+    border: none;
   }
 .h1-welcome{
   font-size: 150px;
@@ -59,8 +66,8 @@ main{
 
 @media screen and (max-width: 414px) {
   body{
-      height: 100%;
-      width: 100%;
+      height: 858px;
+      width: 414px;
     
   }
 
