--- a/style/reg.css
+++ b/style/reg.css
@@ -51,7 +51,7 @@ input{
     border: 1px solid whitesmoke;
     border-radius: 5px;
     
-    color: white;
+    color: black;
 }
 
 .details input{
